@@ -86,33 +86,37 @@ do {\
 } while (0)
 
 // Will try to wait for the expression to become true while allowing event processing
-#define QTRY_VERIFY(__expr) \
+#define QTRY_VERIFY_WITH_TIMEOUT(__expr, __timeout) \
 do { \
     const int __step = 50; \
-    const int __timeout = 5000; \
+    const int __timeoutValue = __timeout; \
     if (!(__expr)) { \
         QTest::qWait(0); \
     } \
-    for (int __i = 0; __i < __timeout && !(__expr); __i+=__step) { \
+    for (int __i = 0; __i < __timeoutValue && !(__expr); __i+=__step) { \
         QTest::qWait(__step); \
     } \
     QVERIFY(__expr); \
 } while (0)
 
+#define QTRY_VERIFY(__expr) QTRY_VERIFY_WITH_TIMEOUT(__expr, 5000)
+
 // Will try to wait for the comparison to become successful while allowing event processing
-#define QTRY_COMPARE(__expr, __expected) \
+
+#define QTRY_COMPARE_WITH_TIMEOUT(__expr, __expected, __timeout) \
 do { \
     const int __step = 50; \
-    const int __timeout = 5000; \
+    const int __timeoutValue = __timeout; \
     if ((__expr) != (__expected)) { \
         QTest::qWait(0); \
     } \
-    for (int __i = 0; __i < __timeout && ((__expr) != (__expected)); __i+=__step) { \
+    for (int __i = 0; __i < __timeoutValue && ((__expr) != (__expected)); __i+=__step) { \
         QTest::qWait(__step); \
     } \
     QCOMPARE(__expr, __expected); \
 } while (0)
 
+#define QTRY_COMPARE(__expr, __expected) QTRY_COMPARE_WITH_TIMEOUT(__expr, __expected, 5000)
 
 #ifdef Q_CC_MSVC
 #define QSKIP(statement) \
