@@ -76,7 +76,7 @@ void tst_QNetworkConfigurationManager::allConfigurations()
 
     QSignalSpy spy(&manager, SIGNAL(updateCompleted()));
     manager.updateConfigurations(); //initiate scans
-    QTRY_VERIFY(spy.count() == 1); //wait for scan to complete
+    QTRY_VERIFY_WITH_TIMEOUT(spy.count() == 1, TestTimeOut); //wait for scan to complete
 
     QList<QNetworkConfiguration> configs = manager.allConfigurations();
 
@@ -153,7 +153,7 @@ void tst_QNetworkConfigurationManager::defaultConfiguration()
     QNetworkConfigurationManager manager;
     QSignalSpy spy(&manager, SIGNAL(updateCompleted()));
     manager.updateConfigurations(); //initiate scans
-    QTRY_VERIFY(spy.count() == 1); //wait for scan to complete
+    QTRY_VERIFY_WITH_TIMEOUT(spy.count() == 1, TestTimeOut); //wait for scan to complete
 
     QList<QNetworkConfiguration> configs = manager.allConfigurations();
     QNetworkConfiguration defaultConfig = manager.defaultConfiguration();
@@ -183,7 +183,7 @@ void tst_QNetworkConfigurationManager::configurationFromIdentifier()
     //force an update to get maximum number of configs
     QSignalSpy spy(&manager, SIGNAL(updateCompleted()));
     manager.updateConfigurations(); //initiate scans
-    QTRY_VERIFY(spy.count() == 1); //wait for scan to complete
+    QTRY_VERIFY_WITH_TIMEOUT(spy.count() == 1, TestTimeOut); //wait for scan to complete
     
     QList<QNetworkConfiguration> configs = manager.allConfigurations();
 
@@ -211,7 +211,7 @@ protected:
         preScanConfigs = manager.allConfigurations();
         QSignalSpy spy(&manager, SIGNAL(updateCompleted()));
         manager.updateConfigurations(); //initiate scans
-        QTRY_VERIFY(spy.count() == 1); //wait for scan to complete
+        QTRY_VERIFY_WITH_TIMEOUT(spy.count() == 1, TestTimeOut); //wait for scan to complete
         configs = manager.allConfigurations();
     }
 public:
@@ -228,7 +228,7 @@ void tst_QNetworkConfigurationManager::usedInThread()
     QNCMTestThread thread;
     connect(&thread, SIGNAL(finished()), &QTestEventLoop::instance(), SLOT(exitLoop()));
     thread.start();
-    QTestEventLoop::instance().enterLoop(100); //QTRY_VERIFY could take ~90 seconds to time out in the thread
+    QTestEventLoop::instance().enterLoop(100); //QTRY_VERIFY_WITH_TIMEOUT could take ~90 seconds to time out in the thread
     QVERIFY(!QTestEventLoop::instance().timeout());
     qDebug() << "prescan:" << thread.preScanConfigs.count();
     qDebug() << "postscan:" << thread.configs.count();
@@ -237,7 +237,7 @@ void tst_QNetworkConfigurationManager::usedInThread()
     QList<QNetworkConfiguration> preScanConfigs = manager.allConfigurations();
     QSignalSpy spy(&manager, SIGNAL(updateCompleted()));
     manager.updateConfigurations(); //initiate scans
-    QTRY_VERIFY(spy.count() == 1); //wait for scan to complete
+    QTRY_VERIFY_WITH_TIMEOUT(spy.count() == 1, TestTimeOut); //wait for scan to complete
     QList<QNetworkConfiguration> configs = manager.allConfigurations();
     QCOMPARE(thread.configs, configs);
     //Don't compare pre scan configs, because these may be cached and therefore give different results
